Добавил пути для контрагентов
